--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "~1.5.2",
+    "bootstrap": "^3.3.6",
     "express": "~4.7.2",
     "method-override": "~2.1.2",
     "mongoose": "~3.6.2",
